# resume_scoring_app

./: README.md
job_matcher/: back.py  config.py  front.py
job_matcher/db/: load_database.py
job_matcher/ner_model_2/ner/: model
job_matcher/notify/: message.py
job_matcher/rating/: get_score.py
job_matcher/resume/: extract_data.py  prompts.py
job_matcher/scraping/: search.py
job_matcher_crewAi/: agents.py  front.py  pyproject.toml  resume_crew.py  tasks.py
job_matcher_crewAi/ner_model_2/vocab/: strings.json
job_matcher_crewAi/rating/: prompts.py
job_matcher_crewAi/resume/: specify_data.py
job_matcher_crewAi/scraping/: search.py
job_matcher_crewAi/tools/: job_scoring_tool.py  message_tools.py  resume_tools.py  search_tool.py
